[package]
name = "aleo"
version = "0.3.6"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Aleo"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/aleo"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies" ]
include = [ "Cargo.toml", "cli", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2021"

[workspace]
members = [ "rust", "wasm" ]

[workspace.dependencies.snarkvm]
version = "0.9.15"

[workspace.dependencies.snarkvm-wasm]
version = "0.9.15"
default-features = false

[lib]
path = "cli/lib.rs"

[[bin]]
name = "aleo"
path = "cli/main.rs"

[features]
default = [ ]

[dependencies.aleo-rust]
path = "rust"
version = "0.3.6"

[dependencies.anyhow]
version = "1.0"

[dependencies.clap]
version = "3.2"
features = [ "derive" ]

[dependencies.colored]
version = "2"

[dependencies.num-format]
version = "0.4.4"

[dependencies.parking_lot]
version = "0.12"

[dependencies.rand]
version = "0.8"
default-features = false

[dependencies.rand_chacha]
version = "0.3.0"
default-features = false

[dependencies.rpassword]
version = "7.2.0"

[dependencies.self_update]
version = "0.36"

[dependencies.serde]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.snarkvm]
workspace = true
features = [
"aleo-cli",
"circuit",
"console",
"parallel",
"snarkvm-synthesizer"
]

[dependencies.thiserror]
version = "1.0"

[dependencies.tokio]
version = "1.27"
features = [ "rt" ]

[dependencies.warp]
version = "0.3"

[dev-dependencies.rusty-hook]
version = "0.11.2"

[build-dependencies.walkdir]
version = "2"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 2
lto = "thin"
incremental = true

[profile.test]
opt-level = 2
lto = "thin"
incremental = true
debug = true
debug-assertions = true
