[package]
name = "aleo"
version = "0.4.2"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Aleo"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/sdk"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies" ]
include = [ "Cargo.toml", "cli", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2021"

[workspace]
members = [ "rust", "wasm", "rust/develop"]

[workspace.dependencies.aleo-rust]
version = "0.4.2"
path = "rust"
default-features = false

[workspace.dependencies.snarkvm]
git = "https://github.com/AleoHQ/snarkVM.git"
branch = "testnet3"

[workspace.dependencies.snarkvm-circuit-network]
git = "https://github.com/AleoHQ/snarkVM.git"
branch = "testnet3"

[workspace.dependencies.snarkvm-console]
git = "https://github.com/AleoHQ/snarkVM.git"
branch = "testnet3"

[workspace.dependencies.snarkvm-console-network]
git = "https://github.com/AleoHQ/snarkVM.git"
branch = "testnet3"

[workspace.dependencies.snarkvm-synthesizer]
git = "https://github.com/AleoHQ/snarkVM.git"
branch = "testnet3"

[workspace.dependencies.snarkvm-wasm]
git = "https://github.com/AleoHQ/snarkVM.git"
branch = "testnet3"

[lib]
path = "cli/lib.rs"

[[bin]]
name = "aleo"
path = "cli/main.rs"

[features]
default = [ ]

[dependencies.aleo-rust]
features = [ "default" ]
workspace = true

[dependencies.anyhow]
version = "1.0"

[workspace.dependencies.clap]
version = "4.3.2"
features = [ "derive", "string" ]

[dependencies.clap]
workspace = true

[dependencies.colored]
version = "2"

[dependencies.num-format]
version = "0.4.4"

[dependencies.parking_lot]
version = "0.12"

[dependencies.rand]
version = "0.8"
default-features = false

[dependencies.rand_chacha]
version = "0.3.0"
default-features = false

[dependencies.rpassword]
version = "7.2.0"

[dependencies.self_update]
version = "0.37"
features = [ "default", "archive-zip", "archive-tar"]

[dependencies.serde]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.snarkvm]
workspace = true
features = [
"aleo-cli",
"circuit",
"console",
"snarkvm-synthesizer",
"snarkvm-utilities",
]

[dependencies.thiserror]
version = "1.0"

[dependencies.tokio]
version = "1.28"
features = [ "rt" ]

[dependencies.warp]
version = "0.3"

[dev-dependencies.rusty-hook]
version = "0.11.2"

[build-dependencies.walkdir]
version = "2"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 2
lto = "thin"
incremental = true

[profile.test]
opt-level = 2
lto = "thin"
incremental = true
debug = true
debug-assertions = true
