[package]
name = "aleo-rust"
version = "0.4.5"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Rust SDK for managing Aleo programs and communicating with the Aleo network"
homepage = "https://aleo.org"
readme = "README.md"
repository = "https://github.com/AleoHQ/sdk"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2021"

[[bench]]
name = "account"
path = "benches/account.rs"
harness = false

[[bench]]
name = "private-key-encryption-at-rest"
path = "benches/private_key_encryption.rs"
harness = false

[dependencies.anyhow]
version = "1"

[dependencies.clap]
workspace = true

[dependencies.indexmap]
version = "2.0"

[dependencies.once_cell]
version = "1.18.0"

[dependencies.rand]
version = "0.8.5"

[dependencies.ureq]
features = [ "json" ]
optional = true
version = "2.7.1"

[dependencies.serde_json]
version = "1"

[dependencies.snarkvm]
optional = true
workspace = true

[dependencies.snarkvm-console]
workspace = true

[dev-dependencies.bencher]
version = "0.1.5"

[dev-dependencies.rand_chacha]
version = "0.3.1"

[features]
default = [ "full" ]
full = [ "ureq", "snarkvm" ]
wasm = [ ]
