[package]
name = "aleo-wasm"
version = "0.4.5"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "WebAssembly based toolkit for developing zero knowledge applications with Aleo"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/sdk"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2021"

[lib]
crate-type = [ "cdylib", "rlib" ]
doctest = false

[dependencies.aleo-rust]
features = [ "wasm" ]
workspace = true

[dependencies.anyhow]
version = "1.0"

[dependencies.getrandom]
version = "0.2"
features = [ "js" ]

[dependencies.indexmap]
version = "2.0.0"

[dependencies.lazy_static]
version = "1.4.0"

[dependencies.hex]
version = "0.4.3"

[dependencies.js-sys]
version = "0.3"

[dependencies.rand]
version = "0.8"

[dependencies.rayon]
version = "1.5"
optional = true

[dependencies.reqwest]
version = "0.11.18"

[dependencies.serde_json]
version = "1.0"

[dependencies.snarkvm-console]
workspace = true
features = [ "wasm" ]

[dependencies.snarkvm-circuit-network]
workspace = true

[dependencies.snarkvm-synthesizer]
workspace = true
features = [ "wasm" ]

[dependencies.snarkvm-wasm]
workspace = true
features = [ "console", "fields", "utilities" ]

[dependencies.wasm-bindgen]
version = "0.2"
features = [ "serde-serialize" ]

[dependencies.wasm-bindgen-futures]
version = "0.4.37"

[dependencies.wasm-bindgen-rayon]
version = "1.0.3"
optional = true

[dependencies.console_error_panic_hook]
version = "0.1.7"

[dependencies.serde]
version = "1.0.164"

[dev-dependencies.wasm-bindgen-test]
version = "0.3.37"

[features]
default = [ "serial", "browser" ]
serial = [ "snarkvm-synthesizer/serial" ]
parallel = [ "wasm-bindgen-rayon", "rayon" ]
browser = [ ]

## Profiles
[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 3
lto = "thin"
incremental = true

[package.metadata.wasm-pack.profile.debug]
wasm-opt = ["-O3"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3"]