[package]
name = "aleo-account"
version = "0.2.0"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "Aleo"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/aleo"
keywords = ["aleo", "cryptography", "blockchain", "decentralized", "zero-knowledge"]
categories = ["cryptography::cryptocurrencies", "operating-systems"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[[bench]]
name = "account"
path = "benches/account.rs"
harness = false

#[dependencies.aleo-network]
#path = "../network"

[dependencies.snarkvm-wasm]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "19848e6"

[dependencies.anyhow]
version = "1"

[dependencies.derivative]
version = "2.2.0"

[dependencies.hex]
version = "0.4.3"

[dependencies.rand]
version = "0.8.0"

[dependencies.rand_chacha]
version = "0.3.0"
default-features = false

[dependencies.thiserror]
version = "1.0"

[dev-dependencies.bencher]
version = "0.1.5"
