[package]
name = "aleo-client"
version = "0.2.0"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "Aleo"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/aleo"
keywords = ["aleo", "cryptography", "blockchain", "decentralized", "zero-knowledge"]
categories = ["cryptography::cryptocurrencies", "operating-systems"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[dependencies.snarkvm]
workspace = true

[dependencies.anyhow]
version = "1"

[dependencies.bincode]
version = "1"

[dependencies.rand]
version = "0.8"

[dependencies.reqwest]
version = "0.11"

[dev-dependencies.serde_json]
version = "1"
