[package]
name = "aleo-development-server"
version = "0.4.5"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A REST API server for local or remote Aleo development"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/sdk"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "apis" ]
license = "GPL-3.0"
edition = "2021"

[[bin]]
name = "aleo-develop"
path = "bin/main.rs"

[dependencies.anyhow]
version = "1"

[dependencies.colored]
version = "2.0.0"

[dependencies.clap]
version = "3.2"
workspace = true

[dependencies.http]
version = "0.2"

[dependencies.indexmap]
version = "2.0"

[dependencies.jsonwebtoken]
version = "8.2"

[dependencies.once_cell]
version = "1.18"

[dependencies.serde]
version = "1"
default-features = false
features = [ "derive" ]

[dependencies.aleo-rust]
features = [ "default" ]
workspace = true

[dependencies.env_logger]
version = "0.10.0"

[dependencies.rand]
version = "0.8"

[dependencies.snarkvm]
workspace = true

[dependencies.time]
version = "0.3"

[dependencies.tokio]
version = "1"
features = [ "full" ]

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version = "0.3.17"
features = [ "fmt", "env-filter" ]

[dependencies.warp]
version = "0.3"
