[package]
name = "aleo-network"
version = "0.2.0"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "Aleo"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/aleo"
keywords = ["aleo", "cryptography", "blockchain", "decentralized", "zero-knowledge"]
categories = ["cryptography::cryptocurrencies", "operating-systems"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[dependencies.aleo-account]
path = "../account"

[dependencies.snarkvm-algorithms]
version = "0.5.5"
default-features = false
features = ["wasm"]

[dependencies.snarkvm-dpc]
version = "0.5.5"
default-features = false
features = [ "wasm" ]

[dependencies.snarkvm-utilities]
version = "0.5.5"
default-features = false