[package]
name = "aleo-network"
version = "0.2.0"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "Aleo"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/aleo"
keywords = ["aleo", "cryptography", "blockchain", "decentralized", "zero-knowledge"]
categories = ["cryptography::cryptocurrencies", "operating-systems"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[dependencies.snarkvm-dpc]
git = "https://github.com/AleoHQ/snarkVM.git"
branch = "feat/dpc-state"
#default-features = false
#features = [ "wasm" ]

[features]
default = ["full"]
full = [ "testnet1", "testnet2" ]
testnet1 = []
testnet2 = []