[package]
name = "aleo-transaction"
version = "0.2.0"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "Aleo"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/aleo"
keywords = ["aleo", "cryptography", "blockchain", "decentralized", "zero-knowledge"]
categories = ["cryptography::cryptocurrencies", "operating-systems"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[dependencies.aleo-account]
path = "../account"

[dependencies.aleo-network]
path = "../network"

[dependencies.aleo-record]
path = "../record"

[dependencies.snarkvm-algorithms]
version = "0.5.5"
default-features = false
features = ["wasm"]

[dependencies.snarkvm-dpc]
version = "0.5.5"
default-features = false
features = [ "wasm" ]

[dependencies.snarkvm-utilities]
version = "0.5.5"
default-features = false

[dependencies.anyhow]
version = "1.0.40"

[dependencies.derivative]
version = "2"

[dependencies.hex]
version = "0.4.3"

[dependencies.once_cell]
version = "1.8.0"

[dependencies.rand]
version = "0.8.0"

[dependencies.thiserror]
version = "1.0"

[dev-dependencies.snarkvm-parameters]
version = "0.5.5"

[dev-dependencies.rand_chacha]
version = "0.3.1"