[package]
name = "aleo-record"
version = "0.2.0"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "Aleo"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/aleo"
keywords = ["aleo", "cryptography", "blockchain", "decentralized", "zero-knowledge"]
categories = ["cryptography::cryptocurrencies", "operating-systems"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[dependencies.aleo-account]
path = "../account"

[dependencies.aleo-environment]
path = "../environment"

[dependencies.snarkvm-algorithms]
git = "https://github.com/AleoHQ/snarkVM.git"
branch = "feat/dpc-state"
default-features = false
features = ["wasm"]

[dependencies.snarkvm-curves]
git = "https://github.com/AleoHQ/snarkVM.git"
branch = "feat/dpc-state"
default-features = false

[dependencies.snarkvm-dpc]
git = "https://github.com/AleoHQ/snarkVM.git"
branch = "feat/dpc-state"
default-features = false
features = [ "wasm" ]

[dependencies.snarkvm-fields]
git = "https://github.com/AleoHQ/snarkVM.git"
branch = "feat/dpc-state"
default-features = false

[dependencies.snarkvm-utilities]
git = "https://github.com/AleoHQ/snarkVM.git"
branch = "feat/dpc-state"
default-features = false

[dependencies.derivative]
version = "2.2.0"

[dependencies.hex]
version = "0.4.3"

[dependencies.itertools]
version = "0.10.0"

[dependencies.once_cell]
version = "1.8.0"

[dependencies.rand]
version = "0.8.0"

[dependencies.rand_chacha]
version = "0.3.0"
default-features = false

[dependencies.thiserror]
version = "1.0"